--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -386,5 +386,7 @@
       href: partner-center-portal/commercial-marketplace-co-sell-countries.md
     - name: 共同販売の州コード
       href: partner-center-portal/commercial-marketplace-co-sell-states.md
+    - name: カテゴリとサブカテゴリ
+      href: categories.md
     - name: サポートされる HTML タグ
       href: supported-html-tags.md
