--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -139,6 +139,8 @@
       href: ../../container-instances/security-baseline.md
     - name: Container Registry のセキュリティ ベースライン
       href: ../../container-registry/security-baseline.md
+    - name: Content Delivery Network のセキュリティ ベースライン
+      href: ../../cdn/security-baseline.md
     - name: Cosmos DB のセキュリティ ベースライン
       href: ../../cosmos-db/security-baseline.md
     - name: Cost Management のセキュリティ ベースライン
