--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -63,14 +63,24 @@
           href: plan-sso-deployment.md
         - name: シングル サインオンのオプション
           href: sso-options.md
+        - name: オンプレミス アプリでのシングル サインオン
+          href: application-proxy-config-sso-how-to.md
         - name: OIDC ベースの SSO
           href: configure-oidc-single-sign-on.md
         - name: SAML ベースの SSO
           href: configure-saml-single-sign-on.md
+        - name: SAML ベースの SSO (オンプレミス アプリ)
+          href: application-proxy-configure-single-sign-on-on-premises-apps.md
         - name: パスワードベースの SSO
           href: configure-password-single-sign-on-non-gallery-applications.md
+        - name: パスワード ベースの SSO (オンプレミス アプリ)
+          href: application-proxy-configure-single-sign-on-password-vaulting.md
         - name: リンクベースの SSO
           href: configure-linked-sign-on.md
+        - name: ヘッダー ベースの SSO (オンプレミス アプリ)
+          href: application-proxy-configure-single-sign-on-with-headers.md
+        - name: Kerberos ベースの SSO (オンプレミス アプリ)
+          href: application-proxy-configure-single-sign-on-with-kcd.md
         - name: ワンクリック SSO
           href: one-click-sso-tutorial.md
     - name: アプリケーションのセキュリティ
@@ -182,24 +192,16 @@
           href: application-proxy-remove-personal-data.md
         - name: カスタム ドメインの構成
           href: application-proxy-configure-custom-domain.md
-        - name: アプリケーション プロキシを使用したシングル サインオン
-          items:
-            - name: Kerberos の制約付き委任 (KCD)
-              href: application-proxy-configure-single-sign-on-with-kcd.md
-            - name: パスワード保管
-              href: application-proxy-configure-single-sign-on-password-vaulting.md
-            - name: ヘッダー
-              href: application-proxy-configure-single-sign-on-with-ping-access.md
-            - name: SAML SSO
-              href: application-proxy-configure-single-sign-on-on-premises-apps.md
         - name: アプリ デリバリー コントローラーとネットワークを使用してレガシ アプリをセキュリティで保護する
           href: secure-hybrid-access.md
         - name: 発行に関するチュートリアル
           items:
             - name: NDES サーバー上のアプリケーション プロキシとの統合
               href: active-directory-app-proxy-protect-ndes.md
+            - name: PingAccess を使用してアプリケーション プロキシと統合する
+              href: application-proxy-ping-access-publishing-guide.md
             - name: Azure AD Domain Services との統合
-              href: /azure/active-directory-domain-services/deploy-azure-app-proxy?context=azure/active-directory/manage-apps/context/manage-apps-context
+              href: ../../active-directory-domain-services/deploy-azure-app-proxy.md?context=azure%252factive-directory%252fmanage-apps%252fcontext%252fmanage-apps-context
             - name: Power BI との統合
               href: application-proxy-integrate-with-power-bi.md
             - name: Cloud App Security との統合
@@ -256,14 +258,12 @@
               href: application-proxy-connectivity-no-working-connector.md
             - name: 管理ポータルでの構成
               href: application-proxy-config-how-to.md
-            - name: アプリに対するシングル サインオンの構成
-              href: application-proxy-config-sso-how-to.md
             - name: 管理ポータルでのアプリの作成に関する問題
               href: application-proxy-config-problem.md
             - name: Kerberos の制約付き委任を構成する
               href: application-proxy-back-end-kerberos-constrained-delegation-how-to.md
             - name: PingAccess を使用した構成
-              href: application-proxy-back-end-ping-access-how-to.md
+              href: /azure/active-directory/manage-apps/application-proxy-ping-access-publishing-guide
             - name: '"この企業アプリケーションにアクセスできない" というエラー'
               href: application-proxy-sign-in-bad-gateway-timeout-error.md
             - name: アプリケーション プロキシ エージェント コネクタのインストール時の問題
@@ -281,11 +281,11 @@
 - name: リソース
   items:
     - name: 開発者向けのサポート オプションとヘルプ オプション
-      href: /azure/active-directory/develop/developer-support-help-options?context=azure/active-directory/manage-apps/context/manage-apps-context
+      href: ../develop/developer-support-help-options.md?context=azure%252factive-directory%252fmanage-apps%252fcontext%252fmanage-apps-context
     - name: Azure フィードバック フォーラム
       href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-active-directory.html'
+      href: /answers/topics/azure-active-directory.html
     - name: 価格
       href: 'https://azure.microsoft.com/pricing/details/active-directory'
     - name: サービスの更新情報
