--- a/articles/advisor/toc.yml
+++ b/articles/advisor/toc.yml
@@ -13,6 +13,10 @@
         - name: ARM テンプレート
           displayName: Resource Manager
           href: advisor-alerts-arm.md
+- name: 概念
+  items:
+    - name: セキュリティ ベースライン
+      href: security-baseline.md
 - name: チュートリアル
   items:
     - name: Advisor の使用を開始する
