--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -25,6 +25,10 @@
       displayName: 'Azure CLI, az datashare consumer invitation, az datashare consumer share-subscription'
 - name: 概念
   items:
+    - name: Security
+      items:
+        - name: セキュリティ ベースライン
+          href: security-baseline.md
     - name: Azure Data Share の用語
       href: terminology.md
     - name: ロールと要件
