--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -28,7 +28,7 @@
       href: network-watcher-nsg-flow-logging-portal.md
 - name: 概念
   items:
-    - name: 接続モニター (プレビュー)
+    - name: 接続モニター
       href: connection-monitor-overview.md
     - name: VM ネットワーク トラフィック フィルターに関する問題を診断する
       href: network-watcher-ip-flow-verify-overview.md
@@ -58,7 +58,7 @@
   items:
     - name: Network Watcher を構成する
       href: network-watcher-create.md
-    - name: 接続モニターを作成する (プレビュー)
+    - name: 接続モニターを作成する
       items:
         - name: Azure Portal の使用
           href: connection-monitor-create-using-portal.md
@@ -66,11 +66,11 @@
           href: connection-monitor-create-using-template.md
         - name: PowerShell の使用
           href: connection-monitor-create-using-powershell.md
-    - name: 接続モニターへの移行 (プレビュー)
+    - name: 接続モニターへの移行
       items:
         - name: Network Performance Monitor から
           href: migrate-to-connection-monitor-preview-from-network-performance-monitor.md
-        - name: 接続モニターから
+        - name: 接続モニターから (クラシック)
           href: migrate-to-connection-monitor-preview-from-connection-monitor.md
     - name: VM ネットワークに関する問題を診断する
       items:
