--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -336,7 +336,9 @@
         - name: ディスクのバックアップとディザスター リカバリー
           href: ../backup-and-disaster-recovery-for-azure-iaas-disks.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: 共有ディスク
-          href: disks-shared.md
+          href: ../disks-shared.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+        - name: ディスクのパフォーマンス レベル
+          href: ../disks-change-performance.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: エフェメラル OS ディスク
           href: ../ephemeral-os-disks.md
     - name: ネットワーク
@@ -959,7 +961,7 @@
           href: /azure/architecture/topics/high-performance-computing/
         - name: IBM Db2 pureScale
           items:
-            - name: アーキテクチャ
+            - name: Architecture
               href: ibm-db2-purescale-azure.md
             - name: デプロイ
               href: deploy-ibm-db2-purescale-azure.md
@@ -971,8 +973,10 @@
               href: add-disk.md
             - name: Azure portal
               href: attach-disk-portal.md
-        - name: ディスク層を変更する
+        - name: ディスクのサービス レベルを変更する - PowerShell/CLI
           href: ../disks-performance-tiers.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
+        - name: ディスクのサービス レベルを変更する - ポータル
+          href: ../disks-performance-tiers-portal.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: ディスクを取り外す
           href: detach-disk.md
         - name: Resource Manager テンプレートによるディスクのデプロイ
@@ -1148,6 +1152,8 @@
               href: upload-vhd.md
             - name: Azure Site Recovery を使用する
               href: ../../site-recovery/migrate-overview.md?bc=/azure/virtual-machines/linux/breadcrumb/toc.json&toc=/azure/virtual-machines/linux/toc.json
+        - name: WebLogic を Azure に移行する
+          href: /azure/developer/java/migration/migrate-weblogic-to-virtual-machines
 - name: リファレンス
   items:
     - name: Azure CLI
