--- a/articles/active-directory/index.yml
+++ b/articles/active-directory/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: mtillman
   manager: daveba
   ms.date: 10/22/2020
-  ms.openlocfilehash: e0b1c8946c1bdd8acfe1c7a21458fee456b2b84f
-  ms.sourcegitcommit: dd45ae4fc54f8267cda2ddf4a92ccd123464d411
+  ms.openlocfilehash: 10b16a6319f0bc458b5bae98edee39133e66acb4
+  ms.sourcegitcommit: 0a9df8ec14ab332d939b49f7b72dea217c8b3e1e
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/29/2020
-  ms.locfileid: "92926820"
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "94835630"
 highlightedContent:
   items:
   - title: Azure AD とは
@@ -78,7 +78,7 @@ conceptualContent:
       text: セルフサービス パスワード リセットを有効にする
     - url: ./authentication/tutorial-enable-azure-mfa.md
       itemType: tutorial
-      text: Azure Multi-Factor Authentication の有効化
+      text: Azure AD の Multi-Factor Authentication を有効にする
     footerLink:
       url: ./authentication/index.yml
       text: 詳細情報
