--- a/articles/iot-fundamentals/index.yml
+++ b/articles/iot-fundamentals/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 09/04/2019
-  ms.openlocfilehash: 5090ae0c5380a16a911ee433d85d288bd9d8fb25
-  ms.sourcegitcommit: 957c916118f87ea3d67a60e1d72a30f48bad0db6
+  ms.openlocfilehash: 6eb82920be23d209433bbe7444c1ac34d374945b
+  ms.sourcegitcommit: 230d5656b525a2c6a6717525b68a10135c568d67
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/19/2020
-  ms.locfileid: "92205304"
+  ms.lasthandoff: 11/19/2020
+  ms.locfileid: "94887605"
 highlightedContent:
   items:
   - title: Azure IoT とは?
@@ -57,6 +57,9 @@ conceptualContent:
     - url: ../iot-hub/quickstart-control-device-node.md
       itemType: quickstart
       text: クラウドからデバイスを制御する
+    - url: /azure-stack/operator/iot-hub-rp-overview
+      itemType: overview
+      text: Azure Stack Hub 上の IoT Hub を調べる
     footerLink:
       url: ../iot-hub/index.yml
       text: 詳細情報
