--- a/articles/active-directory/authentication/TOC.yml
+++ b/articles/active-directory/authentication/TOC.yml
@@ -9,7 +9,7 @@
   items:
     - name: セルフサービス パスワード リセットを有効にする
       href: tutorial-enable-sspr.md
-    - name: Azure Multi-Factor Authentication の有効化
+    - name: Azure AD の Multi-Factor Authentication を有効にする
       href: tutorial-enable-azure-mfa.md
     - name: オンプレミスへのパスワード ライトバックを有効にする
       href: tutorial-enable-sspr-writeback.md
@@ -80,7 +80,7 @@
           href: howto-sspr-authenticationdata.md
         - name: Windows クライアント用 SSPR
           href: howto-sspr-windows.md
-    - name: Azure Multi-Factor Authentication
+    - name: Azure AD の Multi-Factor Authentication
       items:
         - name: デプロイ ガイド
           href: howto-mfa-getstarted.md
@@ -108,7 +108,7 @@
               href: howto-mfa-nps-extension.md
             - name: NPS 拡張機能の詳細な構成
               href: howto-mfa-nps-extension-advanced.md
-            - name: Azure VPN と Azure MFA
+            - name: Azure VPN と Azure AD MFA
               href: ../../vpn-gateway/vpn-gateway-radius-mfa-nsp.md
             - name: リモート デスクトップ ゲートウェイ
               href: howto-mfa-nps-extension-rdg.md
