--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -79,8 +79,6 @@
           href: allocadia-tutorial.md
         - name: Ally.io
           href: ally-tutorial.md
-        - name: Altamira HRM
-          href: altamira-hrm-tutorial.md
         - name: Amazon Business
           href: amazon-business-tutorial.md
         - name: アマゾン ウェブ サービス (AWS)
@@ -435,10 +433,6 @@
           href: cyara-cx-assurance-platform-tutorial.md
         - name: CyberArk SAML Authentication
           href: cyberark-saml-authentication-tutorial.md
-        - name: CyberSolutions CYBERMAILΣ
-          href: cybersolutions-cybermail-tutorial.md
-        - name: CyberSolutions MAILBASEΣ\CMSS
-          href: cybersolutions-mailbase-tutorial.md
         - name: CylancePROTECT
           href: cylanceprotect-tutorial.md
     - name: D - E
@@ -567,8 +561,6 @@
           href: ethicspoint-incident-management-tutorial.md
         - name: Euromonitor Passport
           href: euromonitor-passport-tutorial.md
-        - name: Eventfinity
-          href: eventfinity-tutorial.md
         - name: EverBridge
           href: everbridge-tutorial.md
         - name: Evernote
@@ -605,8 +597,6 @@
           href: fastly-edge-cloud-tutorial.md
         - name: FCM HUB
           href: fcm-hub-tutorial.md
-        - name: Fexa
-          href: fexa-tutorial.md
         - name: フィールド ID
           href: field-id-tutorial.md
         - name: Fidelity NetBenefits
@@ -629,8 +619,6 @@
           href: fiscalnote-tutorial.md
         - name: Five9 Plus Adapter (CTI、Contact Center Agents)
           href: five9-tutorial.md
-        - name: Fivetran
-          href: fivetran-tutorial.md
         - name: Flatter Files
           href: flatter-files-tutorial.md
         - name: Float
@@ -655,8 +643,6 @@
           href: formcom-tutorial.md
         - name: Fortes Change Cloud
           href: fortes-change-cloud-tutorial.md
-        - name: FortiGate SSL VPN
-          href: fortigate-ssl-vpn-tutorial.md
         - name: Freedcamp
           href: freedcamp-tutorial.md
         - name: FreshDesk
@@ -691,14 +677,8 @@
           href: gigya-tutorial.md
         - name: GitHub
           href: github-tutorial.md
-        - name: GitHub AE
-          href: github-ae-tutorial.md
-        - name: GitHub Enterprise Cloud - エンタープライズ アカウント
-          href: github-enterprise-cloud-enterprise-account-tutorial.md
         - name: GlassFrog
           href: glassfrog-tutorial.md
-        - name: Glint Inc
-          href: glint-inc-tutorial.md
         - name: GlobalOne
           href: globalone-tutorial.md
         - name: GoLinks
@@ -707,10 +687,6 @@
           href: citrix-gotomeeting-tutorial.md
         - name: gr8 People
           href: gr8-people-tutorial.md
-        - name: Gradle Enterprise
-          href: gradle-enterprise-tutorial.md
-        - name: Grammarly
-          href: grammarly-tutorial.md
         - name: Gra-Pe
           href: grape-tutorial.md
         - name: greenhouse
@@ -891,8 +867,6 @@
           href: iris-intranet-tutorial.md
         - name: IriusRisk
           href: iriusrisk-tutorial.md
-        - name: iSAMS
-          href: isams-tutorial.md
         - name: iServer Portal
           href: iserver-portal-tutorial.md
         - name: ITRP
@@ -1043,12 +1017,6 @@
           href: lr-tutorial.md
         - name: Logz.io - Azure AD との統合
           href: logzio-cloud-observability-for-engineers-tutorial.md
-        - name: Looker Analytics Platform
-          href: looker-analytics-platform-tutorial.md
-        - name: Loop Flow CRM
-          href: loop-flow-crm-tutorial.md
-        - name: Lucid (すべての製品)
-          href: lucid-tutorial.md
         - name: Lucidchart
           href: lucidchart-tutorial.md
         - name: Luum
@@ -1067,8 +1035,6 @@
           href: mapbox-tutorial.md
         - name: Marketo
           href: marketo-tutorial.md
-        - name: Maverics Identity Orchestrator SAML Connector
-          href: maverics-identity-orchestrator-saml-connector-tutorial.md
         - name: Maxient Conduct Manager Software
           href: maxient-conduct-manager-software-tutorial.md
         - name: MaxxPoint
@@ -1119,8 +1085,6 @@
           href: mobilexpense-tutorial.md
         - name: MobileIron
           href: mobileiron-tutorial.md
-        - name: Mobile Locker
-          href: mobile-locker-tutorial.md
         - name: moconavi
           href: moconavi-tutorial.md
         - name: Momenta
@@ -1191,8 +1155,6 @@
           href: nexonia-tutorial.md
         - name: Nimblex
           href: nimblex-tutorial.md
-        - name: Nimbus
-          href: nimbus-tutorial.md
         - name: Nintex Promapp
           href: promapp-tutorial.md
         - name: Nitro Productivity Suite
@@ -1239,12 +1201,8 @@
           href: oracle-cloud-tutorial.md
         - name: Oracle Fusion ERP
           href: oracle-fusion-erp-tutorial.md
-        - name: Oracle PeopleSoft - Protected by F5 BIG-IP APM
-          href: oracle-peoplesoft-protected-by-f5-big-ip-apm-tutorial.md
         - name: OrgChart Now
           href: orgchartnow-tutorial.md
-        - name: OrgVitality SSO
-          href: orgvitality-sso-tutorial.md
         - name: Origami
           href: origami-tutorial.md
         - name: Otsuka Shokai
@@ -1373,10 +1331,6 @@
           href: proto.io-tutorial.md
         - name: Proxyclick
           href: proxyclick-tutorial.md
-        - name: Pulse Secure PCS
-          href: pulse-secure-pcs-tutorial.md
-        - name: Pulse Secure Virtual Traffic Manager
-          href: pulse-secure-virtual-traffic-manager-tutorial.md
         - name: PureCloud by Genesys
           href: purecloud-by-genesys-tutorial.md
         - name: PurelyHR
@@ -1405,8 +1359,6 @@
           href: raketa-tutorial.md
         - name: Rally Software
           href: rally-software-tutorial.md
-        - name: 'raum]für[raum'
-          href: raumfurraum-tutorial.md
         - name: Real Links
           href: real-links-tutorial.md
         - name: Recognize
@@ -1451,12 +1403,12 @@
           href: robin-tutorial.md
         - name: RStudio Connect SAML Authentication
           href: rstudio-connect-tutorial.md
+        - name: RStudio Server Pro SAML Authentication
+          href: rstudio-server-pro-tutorial.md
         - name: RolePoint
           href: rolepoint-tutorial.md
         - name: Rollbar
           href: rollbar-tutorial.md
-        - name: RSA Archer Suite
-          href: rsa-archer-suite-tutorial.md
         - name: RunMyProcess
           href: runmyprocess-tutorial.md
     - name: S
@@ -1473,7 +1425,7 @@
           href: salesforce-tutorial.md
         - name: Salesforce Sandbox
           href: salesforce-sandbox-tutorial.md
-        - name: SolarWinds Service Desk (旧称 Samanage)
+        - name: Samanage
           href: samanage-tutorial.md
         - name: SAML 1.1 Token enabled LOB App
           href: saml-tutorial.md
@@ -1487,8 +1439,6 @@
           href: samlssojira-tutorial.md
         - name: Azure AD SAML Toolkit
           href: saml-toolkit-tutorial.md
-        - name: Samsara
-          href: samsara-tutorial.md
         - name: Sansan
           href: sansan-tutorial.md
         - name: SAP Business ByDesign
@@ -1511,8 +1461,6 @@
           href: qualtrics-tutorial.md
         - name: Sauce Labs - Mobile and Web Testing
           href: saucelabs-mobileandwebtesting-tutorial.md
-        - name: Saviynt
-          href: saviynt-tutorial.md
         - name: ScaleX Enterprise
           href: scalex-enterprise-tutorial.md
         - name: SCC LifeCycle
@@ -1639,10 +1587,6 @@
           href: snowflake-tutorial.md
         - name: Softeon WMS
           href: softeon-tutorial.md
-        - name: Software AG Cloud
-          href: software-ag-cloud-tutorial.md
-        - name: SolarWinds Orion
-          href: solarwinds-orion-tutorial.md
         - name: Soloinsight-CloudGate SSO
           href: soloinsight-cloudgate-sso-tutorial.md
         - name: Sonarqube
@@ -1669,8 +1613,6 @@
           href: sprinklr-tutorial.md
         - name: Oracle E Business Suite EBS、PeopleSoft、および JDE 用の SSOGEN Azure AD SSO Gateway
           href: ssogen-tutorial.md
-        - name: Starmind
-          href: starmind-tutorial.md
         - name: StatusPage
           href: statuspage-tutorial.md
         - name: Stormboard
@@ -1755,6 +1697,8 @@
           href: tickitlms-learn-tutorial.md
         - name: Tidemark
           href: tidemark-tutorial.md
+        - name: TigerText Secure Messenger
+          href: tigertext-tutorial.md
         - name: TimeLive
           href: timelive-tutorial.md
         - name: TimeOffManager
@@ -1781,8 +1725,6 @@
           href: trakopolis-tutorial.md
         - name: Trakstar
           href: trakstar-tutorial.md
-        - name: TravelPerk
-          href: travelperk-tutorial.md
         - name: Trelica
           href: trelica-tutorial.md
         - name: Trello
@@ -1823,8 +1765,6 @@
           href: velpicsaml-tutorial.md
         - name: Veracode
           href: veracode-tutorial.md
-        - name: VeraSMART
-          href: verasmart-tutorial.md
         - name: Veritas Enterprise Vault.cloud SSO
           href: veritas-tutorial.md
         - name: Verkada コマンド
@@ -1841,14 +1781,10 @@
           href: vidyard-tutorial.md
         - name: Visit.org
           href: visitorg-tutorial.md
-        - name: Visibly
-          href: visibly-tutorial.md
         - name: Visitly
           href: visitly-tutorial.md
         - name: Visma
           href: visma-tutorial.md
-        - name: VMware Horizon - Unified Access Gateway
-          href: vmware-horizon-unified-access-gateway-tutorial.md
         - name: Vocoli
           href: vocoli-tutorial.md
         - name: Vodeclic
@@ -1865,14 +1801,12 @@
       items:
         - name: Watch by Colors
           href: watch-by-colors-tutorial.md
-        - name: Wandera RADAR Admin
+        - name: Wandera
           href: wandera-tutorial.md
         - name: Way We Do
           href: waywedo-tutorial.md
         - name: Wdesk
           href: wdesk-tutorial.md
-        - name: Web Cargo Air
-          href: web-cargo-air-tutorial.md
         - name: webMethods Integration Suite
           href: webmethods-integration-cloud-tutorial.md
         - name: Wedo
@@ -1943,14 +1877,10 @@
           href: yuhu-property-management-platform-tutorial.md
         - name: Zendesk
           href: zendesk-tutorial.md
-        - name: Zengine
-          href: zengine-tutorial.md
         - name: ZenQMS
           href: zenqms-tutorial.md
         - name: ZephyrSSO
           href: zephyrsso-tutorial.md
-        - name: Zeroheight
-          href: zeroheight-tutorial.md
         - name: Ziflow
           href: ziflow-tutorial.md
         - name: ZIVVER
@@ -1985,8 +1915,6 @@
           href: zscaler-zscloud-tutorial.md
         - name: Zwayam
           href: zwayam-tutorial.md
-        - name: Zylo
-          href: zylo-tutorial.md
 - name: ユーザー プロビジョニングのチュートリアル
   expanded: true
   items:
@@ -2008,10 +1936,6 @@
           href: alertmedia-provisioning-tutorial.md
         - name: アマゾン ウェブ サービス (AWS) - ロール プロビジョニング
           href: amazon-web-service-tutorial.md#configure-azure-ad-sso
-        - name: Apple Business Manager
-          href: apple-business-manager-provision-tutorial.md
-        - name: Apple School Manager
-          href: apple-school-manager-provision-tutorial.md
         - name: Asana
           href: asana-provisioning-tutorial.md
         - name: Atlassian Cloud
@@ -2034,18 +1958,8 @@
           href: brivo-onair-identity-connector-provisioning-tutorial.md
         - name: Cerner Central
           href: cernercentral-provisioning-tutorial.md
-        - name: Cinode
-          href: cinode-provisioning-tutorial.md
         - name: Cisco Webex
           href: cisco-webex-provisioning-tutorial.md
-        - name: Clarizen One
-          href: clarizen-one-provisioning-tutorial.md
-        - name: Coda
-          href: coda-provisioning-tutorial.md
-        - name: Code42
-          href: code42-provisioning-tutorial.md
-        - name: Cofense Recipient Sync
-          href: cofense-provision-tutorial.md
         - name: Comeet Recruiting Software
           href: comeet-recruiting-software-provisioning-tutorial.md
         - name: Concur
@@ -2094,8 +2008,6 @@
           href: ideo-provisioning-tutorial.md
         - name: Insight4GRC
           href: insight4grc-provisioning-tutorial.md
-        - name: InVision
-          href: invision-provisioning-tutorial.md
         - name: iPass SmartConnect
           href: ipass-smartconnect-provisioning-tutorial.md
         - name: iProva
@@ -2132,8 +2044,6 @@
           href: mindtickle-provisioning-tutorial.md
         - name: Miro
           href: miro-provisioning-tutorial.md
-        - name: myday
-          href: myday-provision-tutorial.md
     - name: N - Z
       items:
         - name: Netskope User Authentication
@@ -2154,6 +2064,8 @@
           href: pingboard-provisioning-tutorial.md
         - name: Promapp
           href: promapp-provisioning-tutorial.md
+        - name: PrinterLogic SaaS
+          href: printer-logic-saas-provisioning-tutorial.md
         - name: Priority Matrix
           href: priority-matrix-provisioning-tutorial.md
         - name: Proxyclick
@@ -2176,10 +2088,8 @@
           href: salesforce-provisioning-tutorial.md
         - name: Salesforce Sandbox
           href: salesforce-sandbox-provisioning-tutorial.md
-        - name: SolarWinds Service Desk (旧称 Samanage)
+        - name: Samanage
           href: samanage-provisioning-tutorial.md
-        - name: SAP Analytics Cloud
-          href: sap-analytics-cloud-provisioning-tutorial.md
         - name: SAP Cloud Platform Identity Authentication
           href: sap-cloud-platform-identity-authentication-provisioning-tutorial.md
         - name: SAP SuccessFactors to Active Directory
@@ -2224,6 +2134,8 @@
           href: theorgwiki-provisioning-tutorial.md
         - name: Velpic
           href: velpic-provisioning-tutorial.md
+        - name: Visibly
+          href: visibly-provisioning-tutorial.md
         - name: Visitly
           href: visitly-provisioning-tutorial.md
         - name: Webroot Security Awareness Training
