--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -132,7 +132,7 @@
                   href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 管理操作の承認
               href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: セキュリティ
+        - name: Security
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -691,7 +691,7 @@
               href: data-lake-storage-introduction-abfs-uri.md
             - name: 階層型名前空間について
               href: data-lake-storage-namespace.md
-        - name: セキュリティ
+        - name: Security
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -733,8 +733,10 @@
           items:
             - name: Data Lake Storage Gen1 から移行する
               href: data-lake-storage-migrate-gen1-to-gen2.md
-            - name: オンプレミスの HDFS ストアを移行する
+            - name: HDFS ストアをオフラインで移行する
               href: data-lake-storage-migrate-on-premises-HDFS-cluster.md
+            - name: HDFS ストアをオンラインで移行する
+              href: migrate-gen2-wandisco-live-data-platform.md
         - name: 管理する
           items:
             - name: .NET
